# smite-rs

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: client.rs  error.rs  lib.rs  utils.rs
src/entities/: gods.rs  mod.rs  motd.rs  player.rs  session.rs  session_info.rs
src/entities/game/: mod.rs  player_game_info.rs
