[package]
name = "smite"
version = "0.1.1"
edition = "2021"
description = "Library for interacting with the Smite API"
authors = ["Mateusz Burdyna"]
license = "MIT"
rust-version = "1.79.0"
repository = "https://github.com/mateusz2173/smite-rs"
homepage = "https://github.com/mateusz2173/smite-rs"
keywords = ["smite", "api", "wrapper", "hirez", "game"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
